--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vierdaagsefeestenstorage",
+  "name": "vierdaagsestorage",
   "scripts": {
     "build": "npx projen build",
     "bump": "npx projen bump",
@@ -48,6 +48,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@gemeentenijmegen/aws-constructs": "^0.0.30",
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5"
   },
