--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "aws-cdk": "^2",
+    "cdk-nag": "^2.35.29",
     "commit-and-tag-version": "^12",
     "esbuild": "^0.25.0",
     "eslint": "^9",
